lexer_parser/src/test/exempleFile/miniJaja/success/methBool.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation des methodes	*/
/************************/

class methBool{

    boolean myMeth(int x, boolean y){
        int a = 5;
        x++;
        y = false; 
        return y;
    };

	main {
	}
}