lexer_parser/src/test/exempleFile/miniJaja/fail/methMissingBody.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation des methodes	*/
/************************/

class methMissingBody{

    int myMeth(int x, boolean y);

	main {

	}
}